Added Twitter social button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <img src="./resources/images/logo.svg"/>
       <div id="social_media_container">
         <a href="mailto:nicolas@codehive.be"><img src="./resources/images/bttn-mail.svg" class="social_media_button"/></a>
+        <a href="https://twitter.com/codehive_be"><img src="./resources/images/bttn-twitter.svg" class="social_media_button"/></a>
         <a href="https://www.facebook.com/codehivebe"><img src="./resources/images/bttn-facebook.svg" class="social_media_button"/></a>
         <a href="https://www.linkedin.com/in/nicolasrahoens/"><img src="./resources/images/bttn-linkedin.svg" class="social_media_button"/></a>
     </div>
