--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
+<!DOCTYPE html>
 <html>
 <head>
-  <title>CodeHive</title>
-  <link rel="stylesheet" href="./resources/styles/styles.css">
+    <title>CodeHive</title>
+    <link rel="stylesheet" href="./resources/styles/styles.css">
 </head>
 <body>
-  <div class="center-div">
-      <img src="./resources/images/logo.svg"/>
-      <div id="social_media_container">
-        <a href="mailto:nicolas@codehive.be"><img src="./resources/images/bttn-mail.svg" class="social_media_button"/></a>
-        <a href="https://twitter.com/codehive_be"><img src="./resources/images/bttn-twitter.svg" class="social_media_button"/></a>
-        <a href="https://www.facebook.com/codehivebe"><img src="./resources/images/bttn-facebook.svg" class="social_media_button"/></a>
-        <a href="https://www.linkedin.com/in/nicolasrahoens/"><img src="./resources/images/bttn-linkedin.svg" class="social_media_button"/></a>
+    <div class="center-div">
+        <div class="horizontal_container">
+            <img id="logo" src="./resources/images/logo.svg"/>
+        </div>
+        <div class="horizontal_container" id="social_media_container">
+            <a href="mailto:nicolas@codehive.be"><img src="./resources/images/bttn-mail.svg" class="social_media_button"/></a>
+            <a href="https://twitter.com/codehive_be" target="_blank"><img src="./resources/images/bttn-twitter.svg" class="social_media_button"/></a>
+            <a href="https://www.facebook.com/codehivebe" target="_blank"><img src="./resources/images/bttn-facebook.svg" class="social_media_button"/></a>
+            <a href="https://www.linkedin.com/in/nicolasrahoens/" target="_blank"><img src="./resources/images/bttn-linkedin.svg" class="social_media_button"/></a>
+        </div>
     </div>
-</div>
 </body>
 </html>
