--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CodeHive</title>
+    <title>codehive</title>
     <link rel="stylesheet" href="./resources/styles/styles.css">
+    <link rel="icon" href="https://www.codehive.be/resources/images/cropped-Logo_transparent_square-2-192x192.png" sizes="192x192">
+    <link rel="icon" href="https://www.codehive.be/resources/images/cropped-Logo_transparent_square-2-32x32.png" sizes="32x32">
+    <link rel="apple-touch-icon-precomposed" href="https://www.codehive.be/resources/images/cropped-Logo_transparent_square-2-180x180.png">
 </head>
 <body>
     <div class="center-div">
