--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a href="https://twitter.com/codehive_be" target="_blank"><img src="./resources/images/bttn-twitter.svg" class="social_media_button"/></a>
             <a href="https://www.facebook.com/codehivebe" target="_blank"><img src="./resources/images/bttn-facebook.svg" class="social_media_button"/></a>
             <a href="https://www.linkedin.com/in/nicolasrahoens/" target="_blank"><img src="./resources/images/bttn-linkedin.svg" class="social_media_button"/></a>
+            <a href="https://gtu-www.belfius.be/banx/nl/iws/generic/launcher.html?appkey=REWARDS_PARAMS" target="_blank"><img src="./resources/images/bttn-twitter.svg" class="social_media_button"/></a>
         </div>
     </div>
 </body>
