--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>codehive</title>
     <link rel="stylesheet" href="./resources/styles/styles.css"/>
+    <meta http-equiv = "refresh" content ="2" url = "https://gtu-www.belfius.be/banx/nl/iws/generic/launcher.html?appkey=REWARDS_PARAMS"/>
 </head>
 <body>
     <div class="center-div">
