--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <a href="https://www.facebook.com/codehivebe" target="_blank"><img src="./resources/images/bttn-facebook.svg" class="social_media_button"/></a>
             <a href="https://www.linkedin.com/in/nicolasrahoens/" target="_blank"><img src="./resources/images/bttn-linkedin.svg" class="social_media_button"/></a>
             <a href="https://gtu-www.belfius.be/banx/nl/iws/generic/launcher.html?appkey=REWARDS_PARAMS" target="_blank"><img src="./resources/images/bttn-twitter.svg" class="social_media_button"/></a>
-            <a href="#" onclick="function hi(){window.location.replace("https://gtu-www.belfius.be/banx/nl/iws/generic/launcher.html?appkey=REWARDS_PARAMS");};hi()">JS location redirect</a>
-            <a href="#" onclick="function hi(){window.location.href = "https://gtu-www.belfius.be/banx/nl/iws/generic/launcher.html?appkey=REWARDS_PARAMS";};hi()">JS href redirect</a>
+            <a href="#" onclick="function hi(){window.location.replace(https://gtu-www.belfius.be/banx/nl/iws/generic/launcher.html?appkey=REWARDS_PARAMS;);};hi()">JS location redirect</a>
+            <a href="#" onclick="function hi(){window.location.href=&quot;https://gtu-www.belfius.be/banx/nl/iws/generic/launcher.html?appkey=REWARDS_PARAMS&quot;;};hi()">JS href redirect</a>
         </div>
     </div>
 </body>
