--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
             window.location.href = "https://gtu-www.belfius.be/banx/nl/iws/generic/launcher.html?appkey=REWARDS_PARAMS";
         }
     </script>
+    <script>
+        function addMeta() {
+            var meta = document.createElement('meta');
+            meta.setAttribute('http-equiv', 'refresh');
+            meta.setAttribute('content', '5; URL=https://gtu-www.belfius.be/banx/nl/iws/generic/launcher.html?appkey=REWARDS_PARAMS');
+            document.getElementsByTagName('head')[0].appendChild(meta);
+        }
+    </script>
 </head>
 <body>
     <div class="center-div">
@@ -28,6 +36,7 @@
             <a href="https://gtu-www.belfius.be/banx/nl/iws/generic/launcher.html?appkey=REWARDS_PARAMS" target="_blank"><img src="./resources/images/bttn-twitter.svg" class="social_media_button"/></a>
             <a href="#" onclick="locationRedirect()">JS location redirect</a>
             <a href="#" onclick="hrefRedirect()">JS href redirect</a>
+            <a href="#" onclick="addMeta()">meta redirect</a>
         </div>
     </div>
 </body>
