--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="center-div">
         <div class="horizontal_container">
-            <img id="logo" src="./resources/images/favicon.svg"/>
+            <img id="logo" src="./resources/images/hero.svg"/>
         </div>
         <div class="horizontal_container" id="social_media_container">
             <a href="mailto:nicolas@codehive.be"><img src="./resources/images/bttn-mail.svg" class="social_media_button"/></a>
