--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="viewport-fit=cover">
   <meta name="color-scheme" content="light dark">
   <meta name="theme-color" content="#fafafa" media="(prefers-color-scheme: light)">
   <meta name="theme-color" content="#0a0a0a" media="(prefers-color-scheme: dark)">
   <title>CodeHive — Freelance iOS Engineer</title>
-  <link rel="icon" href="https://www.codehive.be/resources/images/cropped-Logo_transparent_square-2-192x192.png" sizes="192x192">
-  <link rel="icon" href="https://www.codehive.be/resources/images/cropped-Logo_transparent_square-2-32x32.png" sizes="32x32">
-  <link rel="apple-touch-icon-precomposed" href="https://www.codehive.be/resources/images/cropped-Logo_transparent_square-2-180x180.png">
+  <link rel="icon" href="https://www.codehive.be/resources/images/logo.svg" sizes="192x192">
+  <link rel="apple-touch-icon-precomposed" href="https://www.codehive.be/resources/images/icon.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./resources/styles/variant-a.css">
 
