Added Link to Fast app

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
+        <li><a href="#work">Work</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
       <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme (dark/light/auto)">
@@ -170,6 +171,24 @@
       <span class="tech-tag">SPM</span>
       <span class="tech-tag">Objective-C</span>
     </div>
+  </section>
+
+  <hr class="divider">
+
+  <!-- WORK -->
+  <section id="work" class="fade-in">
+    <div class="section-label">Work</div>
+    <h2 class="section-title">Apps I've built</h2>
+    <p class="section-desc">Side projects where I get to experiment with ideas and ship something of my own.</p>
+
+    <a href="./fasts.html" class="app-card">
+      <img src="./resources/images/fast-icon.png" alt="Fast app icon" class="app-card-icon">
+      <div class="app-card-info">
+        <h3>Fast <span class="app-card-badge">App Store</span></h3>
+        <p>A beautifully simple intermittent fasting tracker. No account required, no data collected. iPhone, iPad, Apple Watch, and Mac.</p>
+      </div>
+      <svg class="app-card-arrow" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M9 18l6-6-6-6"/></svg>
+    </a>
   </section>
 
   <hr class="divider">
