Added belfius & icapps

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <ul class="nav-links" id="navLinks">
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
+        <li><a href="#consulting">Consulting</a></li>
         <li><a href="#work">Work</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -169,6 +170,31 @@
       <span class="tech-tag">CocoaPods</span>
       <span class="tech-tag">SPM</span>
       <span class="tech-tag">Objective-C</span>
+    </div>
+  </section>
+
+  <hr class="divider">
+
+  <!-- CONSULTING -->
+  <section id="consulting" class="fade-in">
+    <div class="section-label">Consulting</div>
+    <h2 class="section-title">Teams I've worked with</h2>
+    <p class="section-desc">Embedded with product teams to ship features, improve architecture, and accelerate delivery.</p>
+
+    <div class="app-card">
+      <img src="./resources/images/belfius-icon.png" alt="Belfius Mobile app icon" class="app-card-icon">
+      <div class="app-card-info">
+        <h3>Belfius Mobile <span class="app-card-badge">Banking</span></h3>
+        <p>Contributed to one of Belgium's most-used banking apps, working on native iOS features within a large-scale agile team.</p>
+      </div>
+    </div>
+
+    <div class="app-card" style="margin-top: 1rem;">
+      <img src="./resources/images/icapps-logo.png" alt="iCapps logo" class="app-card-icon app-card-icon--contain">
+      <div class="app-card-info">
+        <h3>iCapps <span class="app-card-badge">Agency</span></h3>
+        <p>Worked as a consulting iOS developer at one of Belgium's leading app agencies, delivering native apps for a variety of clients across industries.</p>
+      </div>
     </div>
   </section>
 
