--- a/fasts.html
+++ b/fasts.html
@@ -6,8 +6,26 @@
   <meta name="color-scheme" content="light dark">
   <meta name="theme-color" content="#fafafa" media="(prefers-color-scheme: light)">
   <meta name="theme-color" content="#0a0a0a" media="(prefers-color-scheme: dark)">
-  <title>Fast — Intermittent Fasting</title>
-  <meta name="description" content="A beautifully simple intermittent fasting tracker. No account required, no data collected. Available on iPhone, iPad, and Apple Watch.">
+  <title>Fast — Intermittent Fasting Tracker for iPhone, iPad & Apple Watch</title>
+  <meta name="description" content="A beautifully simple intermittent fasting tracker. No account required, no data collected. Available on iPhone, iPad, Apple Watch, and Mac.">
+  <link rel="canonical" href="https://www.codehive.be/fasts.html">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Fast — Intermittent Fasting Tracker">
+  <meta property="og:description" content="A beautifully simple intermittent fasting tracker. No account required, no data collected. iPhone, iPad, Apple Watch, and Mac.">
+  <meta property="og:url" content="https://www.codehive.be/fasts.html">
+  <meta property="og:image" content="https://www.codehive.be/resources/images/fast-icon.png">
+  <meta property="og:locale" content="en_BE">
+  <meta property="og:site_name" content="CodeHive">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@codehive_be">
+  <meta name="twitter:title" content="Fast — Intermittent Fasting Tracker">
+  <meta name="twitter:description" content="A beautifully simple intermittent fasting tracker. No account required, no data collected. iPhone, iPad, Apple Watch, and Mac.">
+  <meta name="twitter:image" content="https://www.codehive.be/resources/images/fast-icon.png">
+
   <link rel="icon" href="https://www.codehive.be/resources/images/logo.svg" sizes="192x192">
   <link rel="apple-touch-icon-precomposed" href="https://www.codehive.be/resources/images/icon.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -310,6 +328,8 @@
     </div>
   </nav>
 
+  <main>
+
   <!-- HERO -->
   <div class="app-hero">
     <img src="./resources/images/fast-icon.png" alt="Fast app icon" class="app-icon">
@@ -421,6 +441,8 @@
       </a>
     </div>
   </section>
+
+  </main>
 
   <!-- FOOTER -->
   <footer>
